# Passwords

./: .gitignore  Makefile  PPG_personal_pass_generator.py  README.md  base64_matches.py  generate_phone_numbers.cpp  phone_numbers_gen.py  pyproject.toml  requirements.txt
tests/: __init__.py  test_base64_matches.py  test_phone_numbers_gen.py  test_ppg.py
