[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passwords-toolkit"
version = "1.0.0"
description = "Security testing toolkit: personal password generator, phone number generator, and base64 credential encoder."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Andrey Pautov", email = "1200km@gmail.com" }]
keywords = ["security", "pentesting", "password", "wordlist", "credentials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "*.cpp", "*.c"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
